# cura

./: LICENSE  README.md  apps.html  jsconfig.json  package-lock.json  package.json
examples/wallpaper/: wallpaper.json  wallpaper.toml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  layout.rs  lib.rs  main.rs  search.rs
src/lib/: appState.svelte.js  getRgbaString.js  registerKeymaps.js
src/lib/components/: component.svelte  container.svelte  file.svelte  image.svelte  input.svelte  list.svelte  object.svelte  text.svelte
src/routes/: +page.svelte
