[package]
name = "cura"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cura_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "protocol-asset",
  "macos-private-api",
  "unstable",
] }
tauri-plugin-opener = "2"
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
toml = "0.8.22"
glob = "0.3.2"
regex = "1.11.1"
fuzzy-matcher = "0.3.7"
rust-fuzzy-search = "0.1.1"
window-vibrancy = "0.6.0"
tauri-plugin-macos-permissions = "2.3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-global-shortcut = "2"
